--- a/lab3/CMakeLists.txt
+++ b/lab3/CMakeLists.txt
@@ -4,4 +4,5 @@ project(ParallelProgramming CXX)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(task1 "task1.cpp")
+add_executable(task1 "MartixMultiply.cpp")
+add_executable(task2 "ElementSearch.cpp")
